GUI: Change all card fronts to VBox with fixed size of 300(W) x 350(H), bottom-centre alignment, with proper padding and spacing. Add light grey background colour to CSS. Reset position of all elements. Add maxWidth to all questionLabels and set wrapText.

--- a/src/main/resources/view/defaultStyles.css
+++ b/src/main/resources/view/defaultStyles.css
@@ -26,5 +26,5 @@
 }
 
 .light-background {
-    -fx-background-color: #BB86FC;
+    -fx-background-color: #e3e3e3;
 }
